--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class = "card" id = "html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML is a way of building a framework for our webpage</li>
+          <li>It uses elements to structure a page</li>
+          <li>head describes the characterists of the page and are unseen by users</li>
+          <li>body describes the content of the page</li>
+        </ul>
+        </section>
+      <section class = "card" id = "css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS helps add style to our page</li>
+          <li>More notes to come</li>
+        </ul>
+        </section>
+      <section class = "card" id = "git-section">
+        <h2>GIT</h2>
+        <ul>
+          <li>GIT is a way of storing projects in the cloud allowing teams to work in tandom or seperately on a single project</li>
+          <li>The GIT work flow follows the path commit, push, pull</li>
+          <li>commit captures the changes made to a project to be refered to later</li>
+          <li>push adds these changes to our working branch</li>
+          <li>pull requests allow the team to inspect the new feature before it is merged</li>
+          <li>once approved, it is merged into the main</li>
+        </ul>
+        </section>
+      <section class = "card" id = "javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+        </section>
     </main>
 
     <footer>
