added CSS to project and added notes into CSS body/h2/ul element

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel = "stylesheet" href="./assets/style.css" />
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,7 +26,10 @@
         <h2>CSS</h2>
         <ul>
           <li>CSS helps add style to our page</li>
-          <li>More notes to come</li>
+          <li>CSS sytles can be added internally, externally, or inline</li>
+          <li>internally are general sytles applied to all elements of a kind specified written within the main code</li>
+          <li>externally are general sytles applied ot all elements specified but is stored externally in a seperate file and referenced by main</li>
+          <li>inline are styles added directly to a specific element in main</li>
         </ul>
         </section>
       <section class = "card" id = "git-section">
