add CSS file to project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class = "card" id = "javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>language used to add functionality to our structure</li>
         </ul>
         </section>
     </main>
