Finished the java Code i believe.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <h2>JavaScript</h2>
         <ul>
           <li>language used to add functionality to our structure</li>
+          <li>Variables are containers that hold data</li>
+          <li>Control flow executes code in order top to bottom</li>
         </ul>
         </section>
     </main>
